@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-electronics/espresso-ab/espresso-ab-1.0-r1.ebuild,v 1.1 2014/08/31 13:44:15 tomjbe Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-electronics/espresso-ab/espresso-ab-1.0-r1.ebuild,v 1.2 2015/03/13 12:01:46 jlec Exp $
 
 EAPI=5
 
@@ -13,7 +13,4 @@ SLOT="0"
 KEYWORDS="~amd64 ~ppc ~sparc ~x86"
 IUSE=""
 
-DEPEND=""
-RDEPEND=""
-
-DOCS="COPYING README"
+DOCS="README"
