@@ -1,6 +1,10 @@
 # ChangeLog for sci-electronics/espresso-ab
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-electronics/espresso-ab/ChangeLog,v 1.5 2014/08/31 13:44:15 tomjbe Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-electronics/espresso-ab/ChangeLog,v 1.6 2015/03/13 12:01:46 jlec Exp $
+
+  13 Mar 2015; Justin Lecher <jlec@gentoo.org> espresso-ab-1.0-r1.ebuild,
+  espresso-ab-1.0.ebuild:
+  Drop installation of license
 
 *espresso-ab-1.0-r1 (31 Aug 2014)
 
